--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,4 +11,14 @@ server {
     location / {
         proxy_pass http://go:8080;
     }
+
+    location /certs/ {
+        alias /usr/share/nginx/html/certs/;
+    }
+}
+
+server {
+    listen 80;
+    server_name cdn-data.hackadoll.com;
+    return 301 https://cdn-data.hackadoll.com$request_uri;
 }
