--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,10 +6,11 @@ services:
       - common
     environment:
       TZ: Asia/Tokyo
-      FAKE_DOMAIN: $FAKE_DOMAIN
+      FAKE_DOMAIN: $FAKEDOMAIN
       HTTP_PORT: $PORT
     ports:
       - 8080:8080
+    restart: always
     security_opt:
       - apparmor:unconfined
     cap_add:
@@ -23,7 +24,7 @@ services:
       - "53:53/udp"
       - "53:53/tcp"
     extra_hosts:
-      - "$FAKE_DOMAIN:$HOST_IP"
+      - "$FAKE_DOMAIN:$HOSTIP"
     cap_add:
       - NET_ADMIN
 
@@ -34,6 +35,7 @@ services:
       dockerfile: ./nginx/Dockerfile
     ports:
       - "443:443"
+    restart: always
     networks:
       - common
 
