--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,7 +24,7 @@ services:
       - "53:53/udp"
       - "53:53/tcp"
     extra_hosts:
-      - "$FAKE_DOMAIN:$HOSTIP"
+      - "$FAKEDOMAIN:$HOSTIP"
     cap_add:
       - NET_ADMIN
 
