--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,8 @@ services:
       TZ: Asia/Tokyo
       FAKE_DOMAIN: $FAKE_DOMAIN
       HTTP_PORT: $PORT
-    expose:
-      - 8080
+    ports:
+      - "8080:8080"
     restart: always
     security_opt:
       - apparmor:unconfined
