--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,6 +19,12 @@ server {
 
 server {
     listen 80;
-    server_name cdn-data.hackadoll.com;
-    return 301 https://cdn-data.hackadoll.com$request_uri;
+
+    location / {
+        proxy_pass http://go:8080;
+    }
+
+    location /certs/ {
+        alias /usr/share/nginx/html/certs/;
+    }
 }
