--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,8 @@ services:
       TZ: Asia/Tokyo
       FAKE_DOMAIN: $FAKE_DOMAIN
       HTTP_PORT: $PORT
-    ports:
-      - "8080:8080"
+    expose:
+      - 8080
     restart: always
     security_opt:
       - apparmor:unconfined
@@ -35,6 +35,7 @@ services:
       dockerfile: ./nginx/Dockerfile
     ports:
       - "443:443"
+      - "80:80"
     restart: always
     networks:
       - common
