--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,17 @@
 {
-    // IntelliSense を使用して利用可能な属性を学べます。
-    // 既存の属性の説明をホバーして表示します。
-    // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Connect to server",
+            "name": "Remote",
             "type": "go",
             "request": "attach",
             "mode": "remote",
-            "remotePath": "${workspaceFolder}",
+            "remotePath": "/go/src",
             "port": 2345,
-            "host": "127.0.0.1"
-        },
-        {
-            "name": "Launch Package",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${fileDirname}",
-            "env": {
-                "FAKE_DOMAIN": "cdn-data.hackadoll.com"
-            }
+            "host": "localhost",
+            "cwd": "${workspaceRoot}",
+            "env": {},
+            "args": [],
         }
     ]
 }
