--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,15 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      - ./:/go/src/app
+      - ./:/go/src
+    working_dir: /go/src
+    command: air -c .air.toml
     networks:
       - common
     environment:
       TZ: Asia/Tokyo
       GIN_MODE: debug
-      FAKE_DOMAIN: https://cdn-data.hackadoll.com
+      FAKE_DOMAIN: cdn-data.hackadoll.com
       # HTTP_PORT: 8080
     ports:
       - 8080:8080
@@ -20,18 +22,6 @@ services:
       - apparmor:unconfined
     cap_add:
       - SYS_PTRACE
-
-  dnsmasq:
-    restart: always
-    image: andyshinn/dnsmasq
-    container_name: dnsmasq
-    ports:
-      - "53:53/udp"
-      - "53:53/tcp"
-    extra_hosts:
-      - "cdn-data.hackadoll.com:192.168.11.200"
-    cap_add:
-      - NET_ADMIN
 
   nginx:
     container_name: "nginx"
